--- a/AppHub/Exercices/Exercices.cbp
+++ b/AppHub/Exercices/Exercices.cbp
@@ -38,6 +38,10 @@
 		<Unit filename="Exercice.h" />
 		<Unit filename="I_Loadable.h" />
 		<Unit filename="I_Saveable.h" />
+		<Unit filename="Learning.cpp" />
+		<Unit filename="Learning.h" />
+		<Unit filename="MoveLearning.cpp" />
+		<Unit filename="MoveLearning.h" />
 		<Unit filename="MoveRequirement.cpp" />
 		<Unit filename="MoveRequirement.h" />
 		<Unit filename="Parser.cpp" />
@@ -46,6 +50,8 @@
 		<Unit filename="Requirement.h" />
 		<Unit filename="RequirementList.cpp" />
 		<Unit filename="RequirementList.h" />
+		<Unit filename="SubjectLearning.cpp" />
+		<Unit filename="SubjectLearning.h" />
 		<Unit filename="SubjectRequirement.cpp" />
 		<Unit filename="SubjectRequirement.h" />
 		<Unit filename="main.cpp" />
