--- a/SymfonyWWW/app.json
+++ b/SymfonyWWW/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "Symfony Demo Application",
-    "description": "The official demo application for the Symfony framework.",
+    "name": "Symfony Content Collection",
+    "description": "The content collection Service for Xprize iShikhna",
     "keywords": [
         "php",
         "symfony"
