--- a/SymfonyWWW/composer.json
+++ b/SymfonyWWW/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "symfony/symfony-demo",
+    "name": "symfony/symfony-ishikhna",
     "license": "MIT",
     "type": "project",
     "description": "Symfony Demo Application",
